// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "set-type",
    undefined,
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={true}
    overlay={
      <SetTypePopup
        issue={
          Object {
            "type": "BUG",
          }
        }
        onSelect={[Function]}
      />
    }
  >
    <ButtonLink
      className="issue-action issue-action-with-options js-issue-set-type"
      onClick={[Function]}
    >
      <IssueTypeIcon
        className="little-spacer-right"
        query="BUG"
      />
      issue.type.BUG
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render with the action 1`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <SetTypePopup
        issue={
          Object {
            "type": "BUG",
          }
        }
        onSelect={[Function]}
      />
    }
  >
    <ButtonLink
      className="issue-action issue-action-with-options js-issue-set-type"
      onClick={[Function]}
    >
      <IssueTypeIcon
        className="little-spacer-right"
        query="BUG"
      />
      issue.type.BUG
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render without the action when the correct rights are missing 1`] = `
<span>
  <IssueTypeIcon
    className="little-spacer-right"
    query="BUG"
  />
  issue.type.BUG
</span>
`;
